# CutePlusPlus

./: CMakeLists.txt  README.md  cutepp.cpp  main.cpp  metaclass.h  typename.h
test/: CMakeLists.txt  metaclass_test.cpp  typename_test.cpp
